[tool.poetry]
name = "AVIDa-hIL6"
version = "0.1.0"
description = ""
authors = ["Hirofumi Tsuruta"]

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
